Make TAB animated (this took me all day to make)